'ajout_controleurs_part_2'

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,9 @@ RewriteBase /sms/
 
 RewriteRule ^test/(.*)$ index.php?app=Test [QSA,L]
 
+RewriteRule ^settings/(.*)$ index.php?app=Settings [QSA,L]
+
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.php?app=Accueil [QSA,L] 
 
