--- a/.htaccess
+++ b/.htaccess
@@ -5,9 +5,12 @@ RewriteRule ^creation/(.*)$ index.php?app=Creation [QSA,L]
 
 RewriteRule ^test/(.*)$ index.php?app=Test [QSA,L]
 
+RewriteRule ^home/(.*)$ index.php?app=Home [QSA,L]
+
 RewriteRule ^settings/(.*)$ index.php?app=Settings [QSA,L]
 
+RewriteRule ^(.*)$ index.php?app=Authentification [QSA,L] 
 
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php?app=Accueil [QSA,L] 
+
 
